# sample-rag-supreme-octo-system

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PYPI_INSTRUCTIONS.md  README.md  build_package.sh  example_usage.py  instructions.md  main.py  main_cli.py  psuedo_code.code  pyproject.toml  requirements.txt  run.sh  run_cli.sh  setup.py  stop.sh
ai_search_supreme_octo/: __init__.py  cli.py  models.py  rag_system.py  web.py
ai_search_supreme_octo/static/css/: styles.css
ai_search_supreme_octo/static/js/: app.js  chat-app.js
ai_search_supreme_octo/templates/: index.html  index2.html
playing/: index.html
src/: function_schema.py  llm_client.py  models.py  rag_system.py  search_client.py
static/css/: chat-styles.css  styles.css
static/js/: app.js
templates/: index.html
